--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build srm-client —-prod"
+    "postinstall": "ng build srm-client --prod"
   },
   "private": true,
   "dependencies": {
