--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "typescript": "~2.7.2",
+    "string-mask": "^0.3.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
