--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,4 @@ jobs:
       - run:
           name: Deploy Master to Heroku
           command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+            git push https://heroku:ec7f64a9-e43e-4438-910b-89b09328f042@git.heroku.com/srm-client.git master
