--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,18 @@ jobs:
       - run: yarn test
 
   deploy:
-    docker:
-      - image: buildpack-deps:trusty
+    machine:
+        enabled: true
+    working_directory: ~/srm-client
+    environment:
+      - HEROKU_APP: srm-client
     steps:
-      - checkout
+      - restore_cache:
+          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          key: v1-bundle-{{ checksum "Gemfile.lock" }}
+      - restore_cache:
+          key: v1-assets-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Deploy Master to Heroku
           command: |
