--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,19 +36,23 @@ jobs:
       # run tests!
       - run: yarn test
   deploy:
-    machine:
-        enabled: true
-    working_directory: ~/srm-client
-    environment:
-      - HEROKU_APP: srm-client
+    docker:
+      - image: buildpack-deps:trusty
     steps:
-      - restore_cache:
-          key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
-      - restore_cache:
-          key: v1-bundle-{{ checksum "Gemfile.lock" }}
-      - restore_cache:
-          key: v1-assets-{{ .Environment.CIRCLE_SHA1 }}
+      - checkout
       - run:
           name: Deploy Master to Heroku
           command: |
             git push https://heroku:6c7d38bf-b556-436d-95e1-032327014f64@git.heroku.com/srm-client.git master
+            
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
